# PixelRAG

./: .gitignore  .upptimerc.yml  404.html  README.md  RELEASING.md  index.html  pyproject.toml  service-worker-index.html
.github/workflows/: ci.yml  release.yml  uptime-response-time.yml  uptime-site.yml  uptime-summary.yml  uptime.yml
client/: _number_.d210927e.js  _number_.ea2dd8c0.js  client.94b15fd4.js  createOctokit.a13d7292.js  error.f8c32b26.js  index.6d5dc97d.js  rate-limit-exceeded.a08bbc5b.js
client/legacy/: _number_.6b6236df.js  _number_.ccd823d8.js  client.6aa3b3e9.js  createOctokit.4d07c1d7.js  error.1e7aa7f0.js  index.91bb7caf.js  rate-limit-exceeded.0b704ebd.js
demos/: agent_skill.py
demos/e2e/: README.md  run.py
demos/render/: README.md  run.py
deploy/: pixelrag-api.service
embed/: pyproject.toml
embed/src/pixelrag_embed/: chunk.py  embed.py  embed_cpu.py  index.py
eval/: REPRODUCE_PROGRESS.txt  grade.py  reproduce.sh  run_bench.py  run_livevqa.py  run_monaco.py
eval/lib/: benchmarks.py  llm.py  model_config.py  pixel_query.py  retrieval.py  retrievers.py  screenshot.py  simpleqa_data.py  simpleqa_filter.py
history/: agent.yml  api-health.yml  search-api.yml  summary.json  tile-serving.yml  website.yml
index/: pyproject.toml
index/src/pixelrag_index/: config.py  distributed.py  monitor.py  pipelines.py
index/src/pixelrag_index/sources/: __init__.py  base.py  kiwix.py  local.py  pdf.py  web.py
plugin/: README.md  setup.sh
plugin/.claude-plugin/: plugin.json
plugin/commands/: screenshot.md
plugin/skills/pixelbrowse/: SKILL.md
plugin/skills/web-vision/: SKILL.md
render/: pyproject.toml
render/src/pixelrag_render/: __init__.py  chrome.py  render.py
render/src/pixelrag_render/backends/: cdp.py  fast_cdp.py  pdf.py  websocket.py
render/src/pixelrag_render/bench/: __init__.py  bench_throughput.py
render/src/pixelrag_render/strategies/: __init__.py  base.py  cdp_dc_single.py  cdp_directclip.py  cdp_dynamic.py  cdp_fullpage.py  cdp_multitab.py  cdp_noscroll.py  cdp_oneshot.py  cdp_overlap.py  cdp_parallel.py  cdp_pertile_imgwait.py  cdp_phased.py  cdp_pipelined_dc.py  cdp_pipelined_tabs.py  cdp_sequential.py  connection.py
serve/: pyproject.toml
serve/src/pixelrag_serve/: api.py  zim_server.py  zim_server_async.py
skill/: pixelrag.md
tests/: test_chrome_paths.py
tmp/: cef_debug_paint.py  cef_screenshot_test.py  check_bad.py  deploy_bench.sh  lat_test.py  latency_v2.py  minimal.py  profile2.py  profile3.py  profile4.py  profile_capture.py  quick_test.py  run_4kiwix.py  run_angle_vs_baseline.py  run_bench.py  run_detail.py  run_fast.py  run_final2.py  run_final_bench.py  run_flags.py  run_gpu_flags_bench.py  run_gpu_quick.py  run_imgwait.py  run_mt_bench.py  run_opt.py  run_overlap.py  run_phased.py  run_phased2.py  run_pipe2t_bench.py  run_playwright_bench.py  run_playwright_direct.py  run_prescroll.py  run_ptimg.py  run_scaling.py  run_steal.py  run_sweep.py  run_util.py  run_util2.py  run_viewport_imgwait.py  screenshot_all.py  (+7 more)
train/: README.md  build_test_miniv8.py  clean_queries_simpleqa_style.py  convert_data_for_swift.py  dataset.py  eval_checkpoint.py  evaluate.py  export_natural_filtered_v2.py  export_natural_filtered_v2_with_answer.py  extract_hf_image_shards.py  fake_data.py  filter_entity_queries.py  filter_hard.py  filter_hard_negatives_vqa.py  filter_passage.py  filter_self_contained.py  filter_strict.py  filter_text_hard_negatives_llm.py  filter_v2.py  generate_text_query_pairs.py  mine_hard_negatives.py  mine_text_hard_negatives.py  model.py  package_hf_image_shards.py  prepare_hf_dataset.py  prepare_hf_dataset_single_jsonl.py  run_filter_hard_negatives_chunks.py  run_filter_text_hard_negatives_chunks.py  split_first5_chunks.py  train.py  train_contrastors.py  train_swift.py  upload_hf_dataset.py  upload_test_miniv6.py  upload_test_miniv7.py  upload_test_miniv8.py  validate_images.py  verify_embeddings.py
train/models/: __init__.py  biqwen3.py
train/sft/: download_tiles.py  eval_baseline.py  eval_multiimage.py  fetch_top6_retrieval.py  generate_think_traces.py  generate_think_traces_v3_highdetail.py  prepare_mixed_data.py  prepare_sft_data.py  prepare_sft_data_multiimage.py  prepare_sft_data_upscale.py  prepare_sft_data_variable.py  prepare_think_data.py  push_3x_v5_snapshot.py  push_multi3_to_hf.py  push_multik_to_hf.py  push_to_hf.py  push_universal_to_hf.py
train/sft/eval_out/: eval_2x_v2_k1_multiimage_n500.json  eval_2x_v2_k2_multiimage_n500.json  eval_2x_v2_k3_preview_multiimage_n500.json  eval_2x_v2_k4_multiimage_n500.json  eval_2x_v3_k1_multiimage_n500.json  eval_2x_v3_k2_multiimage_n500.json  eval_2x_v3_k3_multiimage_n500.json  eval_2x_v3_k4_multiimage_n500.json  eval_3x_v2_k1_multiimage_n500.json  eval_3x_v2_k2_multiimage_n500.json  eval_3x_v2_k3_multiimage_n500.json  eval_3x_v2_k4_multiimage_n500.json  eval_3x_v3_k1_multiimage_n500.json  eval_3x_v3_k2_multiimage_n500.json  eval_3x_v3_k3_multiimage_n500.json  eval_3x_v3_k4_multiimage_n500.json  eval_3x_v5_16k_k1_multiimage_n500.json  eval_3x_v5_16k_k2_multiimage_n500.json  eval_3x_v5_16k_k3_multiimage_n500.json  eval_3x_v5_16k_k4_multiimage_n500.json  eval_3x_v5_final_k1_multiimage_n500.json  eval_3x_v5_final_k2_multiimage_n500.json  eval_3x_v5_final_k3_multiimage_n500.json  eval_3x_v5_final_k4_multiimage_n500.json  eval_4x_sft_multi3_multiimage_n500.json  eval_4x_v2_k1_multiimage_n500.json  eval_4x_v2_k2_multiimage_n500.json  eval_4x_v2_k3_multiimage_n500.json  eval_4x_v2_k4_multiimage_n500.json  eval_4x_v3_k1_multiimage_n500.json  eval_4x_v3_k2_multiimage_n500.json  eval_4x_v3_k3_multiimage_n500.json  eval_4x_v3_k4_multiimage_n500.json  eval_4x_v5_k1_multiimage_n500.json  eval_4x_v5_k2_multiimage_n500.json  (+105 more)
train/tests/: test_grad_equivalence.py  test_grad_multi_gpu.py  test_swift_equivalence.py
web/: .env.production  agent-server.mjs  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AboutSection.tsx  ApiPlayground.tsx  NavLinks.tsx  SearchBar.tsx
web/lib/: uptime.ts
(+4 files in other folders)
