[project]
name = "pixelrag"
version = "0.1.0"
description = "Visual Retrieval-Augmented Generation — render, embed, index, search, train"
requires-python = ">=3.12"
authors = [{ name = "Zhifei Li", email = "andylizf@outlook.com" }]
license = "Apache-2.0"
readme = "README.md"
keywords = ["rag", "retrieval", "vision-language", "screenshots", "embeddings", "faiss"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pixelrag-render",
    "anthropic>=0.102.0",
    "cef-capi-py>=131.3.5",
    "pymupdf>=1.27.2.3",
    "pyturbojpeg>=2.2.0",
]

[project.optional-dependencies]
eval = [
    "pandas>=2.0",
    "Pillow>=10.0",
    "tqdm>=4.60",
    "trafilatura>=1.6",
    "openai>=1.0",
    "aiohttp>=3.9",
    "datasets>=2.14",
    "huggingface-hub>=0.20",
]
embed = ["pixelrag-embed"]
index = ["pixelrag-index"]
serve = ["pixelrag-serve"]
all = ["pixelrag-embed", "pixelrag-index", "pixelrag-serve"]

[project.scripts]
pixelrag = "pixelrag.cli:main"

[project.urls]
Homepage = "https://pixelrag.ai"
Repository = "https://github.com/StarTrail-org/PixelRAG"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pixelrag"]

[tool.hatch.build.targets.sdist]
# The repo root holds huge data dirs (.venv, tiles, arxiv, ...) and vendored licenses;
# anchor with a leading slash so only the package + root README/LICENSE ship.
include = ["/src/pixelrag", "/README.md", "/LICENSE"]

[tool.uv.sources]
pixelrag-render = { workspace = true }
pixelrag-embed = { workspace = true }
pixelrag-index = { workspace = true }
pixelrag-serve = { workspace = true }

[tool.uv.workspace]
members = ["render", "embed", "index", "serve", "train"]

[tool.uv]
override-dependencies = ["nvidia-cudnn-cu12==9.20.0.48"]
environments = ["sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.ruff]
exclude = ["tmp"]

[tool.ruff.lint]
ignore = [
    "E402",  # module-level import not at top — common in ML codebases
    "E741",  # ambiguous variable name (l, O, I)
]

[tool.pyright]
extraPaths = ["render/src", "embed/src", "index/src", "serve/src", "train/src"]
venvPath = "."
venv = ".venv"
