[project]
name = "pixelrag-embed"
version = "0.1.0"
description = "Image tiles to vectors to FAISS index. Three independent CLI tools."
requires-python = ">=3.12"
authors = [{ name = "Zhifei Li", email = "andylizf@outlook.com" }]
license = "Apache-2.0"
dependencies = [
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.0",
    "faiss-cpu>=1.9.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
gpu = ["faiss-gpu-cu12>=1.13.2"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pixelrag_embed"]

[tool.uv]
override-dependencies = ["nvidia-cudnn-cu12==9.20.0.48"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]
