[project]
name = "pixelrag-index"
version = "0.1.0"
description = "Build searchable FAISS indexes from any document source"
requires-python = ">=3.12"
dependencies = [
    "pixelrag-render",
    "pixelrag-embed",
    "pyyaml>=6.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
kiwix = ["libzim>=3.6.0"]
distributed = ["boto3>=1.42.0"]

[project.scripts]
pixelrag-index = "pixelrag_index.pipelines:main"
pixelrag-monitor = "pixelrag_index.monitor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pixelrag_index"]

[tool.uv.sources]
pixelrag-render = { workspace = true }
pixelrag-embed = { workspace = true }
