[project]
name = "pixelrag-render"
version = "0.1.0"
description = "Document to image tiles. Renders web pages, PDFs, and local files as tiled screenshots."
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]
pdf = ["pdf2image>=1.16.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
pixelshot = "pixelrag_render.render:main"
pixelrag-chrome = "pixelrag_render.chrome:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pixelrag_render"]
