[project]
name = "pixelrag-serve"
version = "0.1.0"
description = "FAISS-based visual search API. Serves any pre-built index."
requires-python = ">=3.12"
authors = [{ name = "Zhifei Li", email = "andylizf@outlook.com" }]
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.9.0",
    "transformers>=4.57.0",
    "torch>=2.9.0",
    "qwen-vl-utils",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
gpu = ["faiss-gpu-cu12>=1.13.2"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pixelrag_serve"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
